--- a/themes/climatestrike/scss/partials/components/_footer.scss
+++ b/themes/climatestrike/scss/partials/components/_footer.scss
@@ -10,6 +10,10 @@
 
         text-align: center;
     }
+
+    @include respond(max-width, $widths-medium) {
+        flex-wrap: wrap;
+    }
 }
 
 .footer-menu {
