--- a/themes/climatestrike/scss/partials/components/_tease.scss
+++ b/themes/climatestrike/scss/partials/components/_tease.scss
@@ -107,7 +107,7 @@
         margin-top: 1em;
     }
 
-    @include respond(max-width, 800px) {
+    @include respond(max-width, $widths-small) {
         width: 100%;
     }
 }
